dataset1235/2025-2/805158916/users/4104794000/executions/3435325918_3974737893.log
== SUBMISSION (2025-09-03 14:33:04)
-- CODE: 
x = int(input("insira um numero inteiro: "))
y = int(input("divisor"))

if x % y == 0 :
  prit(x//y)
  print("sim")
else:
  print("nao")
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
insira um numero inteiro: divisornao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prit(x//y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prit(x//y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prit(x//y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
insira um numero inteiro: divisornao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
insira um numero inteiro: divisornao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:34:35)
-- CODE: 
x = int(input("insira um numero inteiro: "))
y = int(input("divisor"))

if x % y == 0 :
  print(x//y)
  print("sim")
else:
  print(x%y)
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:33:33)
-- CODE: 
x = int(input("insira um numero inteiro: "))
y = int(input("divisor"))

if x % y == 0 :
  prit(x//y)
  print("sim")
else:
  print(x%y)
  print("nao")
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prit(x//y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prit(x//y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prit(x//y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:33:38)
-- CODE: 
x = int(input("insira um numero inteiro: "))
y = int(input("divisor"))

if x % y == 0 :
  prit(x//y)
  print("sim")
else:
  print(x%y)
  print("nao")
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prit(x//y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prit(x//y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prit(x//y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
